--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
+    "cors": "^2.8.5",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
